feat(docs): WIP PD1

--- a/docs/pd1/tex/main.tex
+++ b/docs/pd1/tex/main.tex
@@ -91,7 +91,7 @@
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \pagestyle{headings}
 
-\input{tex/1-wstep}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
+\input{tex/1-wybor-tematu}         % Wygodnie jest trzymać każdy rozdział w osobnym pliku.
 \input{tex/2-realizacja-pd1.tex}    % Umożliwia to również łatwą migrację do nowej wersji szablonu:
 
 %---------------
