feat(docs): WIP PD1

--- a/docs/pd1/tex/main.tex
+++ b/docs/pd1/tex/main.tex
@@ -110,7 +110,6 @@
 \acronymlist
 \acronym{EiTI}{Wydział Elektroniki i Technik Informacyjnych}
 \acronym{PW}{Politechnika Warszawska}
-\acronym{WEIRD}{ang. \emph{Western, Educated, Industrialized, Rich and Democratic}}
 \vspace{0.8cm}
 
 %--------------------------------------
@@ -121,6 +120,11 @@
 \listoffigurestoc    % Spis rysunków.
 \vspace{1cm}         % vertical space
 \listoftablestoc     % Spis tabel.
+\vspace{1cm}
+\addcontentsline{toc}{section}{Spis listingów}  % Spis listingów.
+\lstlistoflistings
+
+% TODO spis listingów w source codzie templatki
 
 % TODO potrzebne?
 % \vspace{1cm}         % vertical space
