feat(docs): PD1 (RC-2)

--- a/docs/pd1/tex/tex/2-realizacja-pd1.tex
+++ b/docs/pd1/tex/tex/2-realizacja-pd1.tex
@@ -149,7 +149,7 @@ Baza danych: MongoDB
 
 \subsubsection{Część kliencka}
 
-Język programowania: TypeScript
+Język programowania: TypeScript \cite{typescript}
 
 Frameworki: Remix + React
 
@@ -209,7 +209,7 @@ W ramach części serwerowej zaimplementowano następujące funkcjonalności:
 Część kliencka obejmuje następujące funkcjonalności:
 
 \begin{itemize}
-    \item Uwierzytelnianie użytkownika przy pomocy platformy Auth0,
+    \item Uwierzytelnianie użytkownika przy pomocy platformy Auth0 \cite{auth0},
     \item Wyświetlanie listy i detali restauracji.
 \end{itemize}
 
@@ -259,19 +259,19 @@ Wymagania funkcjonalne i niefunkcjonalne zostały zidentyfikowane podczas analiz
 \subsubsection{Wymagania niefunkcjonalne}
 
 
-\textbf{Skalowalność} - każdy z komponentów systemu powinien być skalowalny w zależności od obciążenia. Każdy mikroserwis powinien móc być replikowany
+\textbf{Skalowalność} - każdy z komponentów systemu powinien być skalowalny w zależności od obciążenia. Każdy mikroserwis powinien móc być replikowany.
 
-\textbf{Wysoka dostępność} - jeżeli jeden mikroserwis nie jest dostępny, inne mikroserwisy powinny nadal działać poprawnie
+\textbf{Wysoka dostępność} - jeżeli jeden mikroserwis nie jest dostępny, inne mikroserwisy powinny nadal działać poprawnie.
 
-\textbf{Bezpieczeństwo} - aplikacja powinna zapewniać odpowiednie zabezpieczenia w celu ochrony poufności, integralności i dostępności danych. Dostęp do mikroserwisów powinien być chroniony przez autoryzację i uwierzytelnianie, a dane powinny być szyfrowane w tranzycie
+\textbf{Bezpieczeństwo} - aplikacja powinna zapewniać odpowiednie zabezpieczenia w celu ochrony poufności, integralności i dostępności danych. Dostęp do mikroserwisów powinien być chroniony przez autoryzację i uwierzytelnianie, a dane powinny być szyfrowane w tranzycie.
 
-\textbf{Monitorowanie i logowanie} - aplikacja powinna umożliwiać monitorowanie i logowanie zdarzeń w celu analizy i debugowania. Każdy mikroserwis powinien logować swoje zdarzenia w centralnym repozytorium, a system powinien umożliwiać monitorowanie stanu mikroserwisów
+\textbf{Monitorowanie i logowanie} - aplikacja powinna umożliwiać monitorowanie i logowanie zdarzeń w celu analizy i debugowania. Każdy mikroserwis powinien logować swoje zdarzenia w centralnym repozytorium, a system powinien umożliwiać monitorowanie stanu mikroserwisów.
 
-\textbf{Wydajność} - system powinien umożliwiać równoległe przetwarzanie minimum 10 dowolnych żądań na sekundę
+\textbf{Wydajność} - system powinien umożliwiać równoległe przetwarzanie minimum 10 dowolnych żądań na sekundę.
 
-\textbf{Synchronizacja i spójność danych} - system powinien zapewniać spójność danych pomiędzy mikroserwisami
+\textbf{Synchronizacja i spójność danych} - system powinien zapewniać spójność danych pomiędzy mikroserwisami.
     
-\textbf{Testowalność} - system powinien być łatwy do testowania, zarówno jednostkowo, jak i integracyjnie
+\textbf{Testowalność} - system powinien być łatwy do testowania, zarówno jednostkowo jak i integracyjnie.
 
 \subsection{Wykonanie makiet interfejsu użytkownika}
 
