--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -1,88 +1,158 @@
-% Artykuł w recenzowanym czasopiśmie.
-@article{szczypiorski2015,
-    author    = {Szczypiorski, K. and Janicki, A. and Wendzel, S},
-    title     = {{T}he {G}ood, {T}he {B}ad {A}nd {T}he {U}gly: {E}valuation of {W}i-{F}i {S}teganography},
-    journal   = {Journal of Communications},
-    volume    = {10},
-    number    = {10},
-    pages     = {747--752},
-    publisher = {Journal of Communications (JCM)},
-    year      = {2015}
-}
-
 % Książka.
-@book{goossens93,
-    author    = {Michel Goossens and Frank Mittelbach and Alexander Samarin},
-    title     = {The LaTeX Companion},
-    publisher = {Addison-Wesley},
-    address   = {Reading, Massachusetts},
-    year      = {1993}
+@book{martin2017,
+  author    = {Robert C. Martin},
+  title     = {Clean Architecture: A Craftsman's Guide to Software Structure and Design},
+  publisher = {Pearson},
+  year      = {2017}
 }
 
-% Fragment książki (np. zakres stron).
-@inbook{wang97,
-    author    = {Hao Wang},
-    title     = {A Logical Journey: From G{\"o}del to Philosophy.},
-    publisher = {A Bradford Book},
-    pages     = {316},
-    year      = {1997}
+@misc{axonframework,
+  title        = {Axon Framework},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.axoniq.io/reference-guide}}
 }
 
-% Fragment książki (np. esej), posiadający własny tytuł.
-@incollection{goedel95,
-    author    = {Kurt G{\"o}del},
-    title     = {Texts relating to the ontological proof},
-    booktitle = {Unpublished Essays and Lectures},
-    publisher = {Oxford University Press},
-    pages     = {429--437},
-    year      = {1995}
+@misc{springboot,
+  title        = {Framework Spring Boot},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://spring.io/projects/spring-boot}}
 }
 
-% Publikacja konferencyjna.
-@inproceedings{benzmuller2014,
-    author       = {{Ch}. Benzmuller and B. W. Paleo},
-    title        = {Automating {G\"o}del’s {O}ntological {P}roof of {G}od’s {E}xistence with {H}igher-order {A}utomated {T}heorem {P}rovers},
-    booktitle    = {European	Conference on Artificial Intelligence},
-    publisher    = {IOS Press},
-    howpublished = {Dostęp zdalny (10.04.2019): \url{http://page.mi.fu-berlin.de/cbenzmueller/papers/C40.pdf}},
-    year         = {2014}
+@misc{eventstorming,
+  title        = {Event Storming},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.ibm.com/cloud/architecture/architecture/practices/event-storming-methodology-architecture}}
 }
 
-% Raport techniczny.
-@techreport{duqu2011,
-    author      = {Bencsáth, B. and Pék, G. and Buttyán, L. and Félegyházi M.},
-    title       = {{D}uqu: {A} {S}tuxnet-like malware found in the wild},
-    institution = {Laboratory of Cryptography and System Security, Hungary},
-    year        = {2011}
+@misc{miro,
+  title        = {Platforma Miro},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://miro.com}}
 }
 
-% Specyfikacja techniczna.
-@manual{shs2015,
-    title        = {{FIPS} 180-4: {S}ecure {H}ash {S}tandard ({SHS})},
-    howpublished = {Dostęp zdalny (13.03.2019): \url{https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf}},
-    year         = {2015}
+@misc{jvm,
+  title        = {Platforma Java Virtual Machine},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.oracle.com/en/database/oracle/oracle-database/21/jjdev/Oracle-JVM-overview.html}}
 }
 
-% Praca magisterska.
-@mastersthesis{wozniak2018,
-    author = {Woźniak, Piotr},
-    title  = {{P}rogramowanie kwadratowe w usuwaniu efektu rozmycia ruchu w fotografii cyfrowej},
-    school = {Wydział Elektroniki i Technik Informacyjnych, Politechnika Warszawska},
-    year   = {2018}
+@misc{nosql,
+  title        = {Bazy danych NoSQL},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.mongodb.com/nosql-explained}}
 }
 
-% Nieopublikowany artykuł, dostępny np. tylko w internecie.
-@unpublished{koons2005,
-    author = {Koons, Robert C.},
-    title  = {{S}obel on {G\"o}del’s {O}ntological {P}roof},
-    note   = {Dostęp zdalny (25.04.2019): \url{http://www.robkoons.net/media/69b0dd04a9d2fc6dffff80b4ffffd524.pdf}},
-    year   = {2005}
+@misc{mongodb,
+  title        = {Baza MongoDB},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.mongodb.com/docs/manual}}
 }
 
-% Źródło innego typu, np. repozytorium na GitHubie.
-@misc{dcp19,
-    author       = {Brodzki, Artur M.},
-    title        = {{I}mplementation of own steganography protocol {DCP}-19, loosely based on {HICCUPS}},
-    howpublished = {Dostęp zdalny (14.03.2019): \url{https://github.com/ArturB/DCP-19}},
-    year         = {2019}
+@misc{json,
+  title        = {Specyfikacja formatu JSON},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.json.org/json-en.html}}
+}
+
+@misc{react,
+  title        = {Biblioteka React},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://react.dev}}
+}
+
+@misc{remix,
+  title        = {Biblioteka Remix},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://remix.run}}
+}
+
+@misc{kotlin,
+  title        = {Język Kotlin},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://kotlinlang.org}}
+}
+
+@misc{typescript,
+  title        = {Język TypeScript},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.typescriptlang.org}}
+}
+
+@misc{docker,
+  title        = {Narzędzie Docker},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.docker.com}}
+}
+
+@misc{kubernetes,
+  title        = {Narzędzie Kubernetes},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://kubernetes.io}}
+}
+
+@misc{githubactions,
+  title        = {Platforma Github Actions},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://github.com/features/actions}}
+}
+
+@misc{prometheus,
+  title        = {Narzędzie Prometheus},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://prometheus.io}}
+}
+
+@misc{grafana,
+  title        = {Narzędzie Grafana},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://grafana.com}}
+}
+
+@misc{loki,
+  title        = {Narzędzie Loki},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://grafana.com/oss/loki}}
+}
+
+@misc{intellij,
+  title        = {IDE IntelliJ IDEA},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.jetbrains.com/idea}}
+}
+
+@misc{dockercompose,
+  title        = {Narzędzie Docker Compose},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.docker.com/compose}}
+}
+
+@misc{git,
+  title        = {Narzędzie Git},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://git-scm.com}}
+}
+
+@misc{ubuntu2204,
+  title        = {System operacyjny Ubuntu 22.04},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://releases.ubuntu.com/jammy/}}
+}
+
+@misc{microk8s,
+  title        = {Klaster Kubernetes - MicroK8s},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://microk8s.io}}
+}
+
+@misc{auth0,
+  title        = {Platforma Auth0},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://auth0.com}}
+}
+
+@misc{moqups,
+  title        = {Narzędzie Moqups},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://moqups.com}}
+}
+
+@misc{wireframing,
+  title        = {Technika "wireframingu"},
+  howpublished = {Dostęp zdalny (07.06.2023): \url{https://www.experienceux.co.uk/faqs/what-is-wireframing}}
+}
+
+@unpublished{boundedcontext,
+  author = {Martin Fowler},
+  note   = {Dostęp zdalny (07.06.2023): \url{https://martinfowler.com/bliki/BoundedContext.html}},
+  title  = {Bounded Context},
+  year   = {2014}
+}
+
+@unpublished{cqrs,
+  author = {Martin Fowler},
+  note   = {Dostęp zdalny (07.06.2023): \url{https://martinfowler.com/bliki/CQRS.html}},
+  title  = {CQRS},
+  year   = {2011}
+}
+
+@unpublished{eventsourcing,
+  author = {Martin Fowler},
+  note   = {Dostęp zdalny (07.06.2023): \url{https://martinfowler.com/eaaDev/EventSourcing.html}},
+  title  = {Event Sourcing},
+  year   = {2005}
 }
